# Aquarius

./: CMakeLists.txt
docs/: readme.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.c
src/server/: CMakeLists.txt  main.c
