SET (TARGET_NAME "client")
AUX_SOURCE_DIRECTORY (. SRC_FILES)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
SET (QUICHE_INC ${CMAKE_SOURCE_DIR}/3rdparty/quiche/inc)
SET (QUICHE_LIB ${CMAKE_SOURCE_DIR}/3rdparty/quiche/lib)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
INCLUDE_DIRECTORIES (${QUICHE_INC})
LINK_DIRECTORIES (${QUICHE_LIB})
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} quiche ev)
INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin) 
